--- a/Web.config
+++ b/Web.config
@@ -82,4 +82,4 @@
       <add name="Npgsql Provider" invariant="Npgsql" description=".NET Framework Data Provider for PostgreSQL" type="Npgsql.NpgsqlFactory, Npgsql, Version=4.0.10.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7" />
     </DbProviderFactories>
   </system.data>
-<connectionStrings><add name="db_personelEntities" connectionString="metadata=res://*/Models.Entity.MdlPersonel.csdl|res://*/Models.Entity.MdlPersonel.ssdl|res://*/Models.Entity.MdlPersonel.msl;provider=Npgsql;provider connection string=&quot;Host=192.168.2.100;Database=db_personel;Username=postgres;Password=Kalemci3675;Persist Security Info=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings><add name="db_personelEntities" connectionString="metadata=res://*/Models.Entity.MdlPersonel.csdl|res://*/Models.Entity.MdlPersonel.ssdl|res://*/Models.Entity.MdlPersonel.msl;provider=Npgsql;provider connection string=&quot;Host=192.168.2.100;Database=db_personel;Username=postgres;Password=****;Persist Security Info=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
